--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@
             <div class="box animate__animated animate__fadeInLeft animate__delay-3s">
                 <p class="mark-text fw-bold text-danger">Pemrograman WEB</p>
                 <h1 class="text-align-justify">Welcome To <span class="text-primary">RNR Digital Printing</span></h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut sed nesciunt assumenda odio tenetur consequatur enim fuga, obcaecati, dolore atque numquam sit facere! Placeat, ad. Praesentium rem tempore iste necessitatibus.
-                In perspiciatis nisi quidem vitae optio corrupti ipsa qui. Dolore cum, dolores, totam voluptas nihil quidem quis repudiandae ipsa culpa eum ullam officiis sequi nesciunt! Molestias quae obcaecati natus sapiente?
-                Facilis commodi fuga velit! Labore tempore, saepe vel quaerat harum, odio voluptates maiores totam repellat illum ratione aspernatur. Doloremque molestiae molestias debitis, alias minus sit eos repellendus ab quasi qui.</p>
+                <p>RNR Digital Printing adalah platform digital printing berbasis web yang menyediakan layanan cetak berbagai produk seperti banner, stiker, kartu nama, dan kebutuhan cetak lainnya. Melalui tampilan yang sederhana dan user-friendly, pelanggan dapat dengan mudah melihat daftar harga, memilih layanan, dan melakukan pemesanan secara praktis. RNR Digital Printing hadir untuk memudahkan proses cetak Anda dengan layanan cepat, terjangkau, dan terpercaya.</p>
                 <div>
                     <a href="#about" class="btn btn-warning">Tentang Kami</a>
                     <a href="#services" class="btn btn-warning">Layanan Cetak</a>
@@ -144,16 +142,16 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ipsam eaque neque, quisquam natus quod officiis molestiae minima error aperiam maxime fugiat, delectus quos eum nam necessitatibus perferendis, laboriosam recusandae?</p>
             <div class="box pt-4 d-flex gap-3 flex-md-row flex-column" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
               <div class="order-guide p-4 shadow bg-primary text-white rounded-4">
-                <h4 class="mb-3 fw-bold">1. Select Options</h4>
-                <p class="lh-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cupiditate quas rem iusto quod debitis sed inventore unde! Obcaecati, deserunt.</p>
+                <h4 class="mb-3 fw-bold">1. Tentukan pilihanmu</h4>
+                <p class="lh-lg">Pilih opsi yang kamu inginkan untuk cetakanmu. Kami akan membuatmu senang dengan pilihanmu.</p>
               </div>
               <div class="order-guide p-4 shadow bg-primary text-white rounded-4">
                 <h4 class="mb-3 fw-bold">2. Upload Desain Kamu</h4>
-                <p class="lh-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cupiditate quas rem iusto quod debitis sed inventore unde! Obcaecati, deserunt.</p>
+                <p class="lh-lg">Upload desain kamu yang sudah jadi di sini, dan kami akan mencetaknya sesuai dengan pilihanmu</p>
               </div>
               <div class="order-guide p-4 shadow bg-primary text-white rounded-4">
                 <h4 class="mb-3 fw-bold">3. Checkout - Order</h4>
-                <p class="lh-lg">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat cupiditate quas rem iusto quod debitis sed inventore unde! Obcaecati, deserunt.</p>
+                <p class="lh-lg">Checkout dan selesaikan pesanan kamu dengan sangat mudah. lakukan pembayaran sesuai yang tertera di menu checkout</p>
               </div>
             </div>
           </div>
