--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="container">
           <div class="order-guide-box"  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
             <h1>Bagaimana Cara Memesan</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ipsam eaque neque, quisquam natus quod officiis molestiae minima error aperiam maxime fugiat, delectus quos eum nam necessitatibus perferendis, laboriosam recusandae?</p>
+            <p>Pilih jenis cetakan yang kamu inginkan, unggah desainmu, lalu lakukan checkout dan pembayaran. Proses mudah, cepat, dan praktis hanya di RNR Digital Printing!</p>
             <div class="box pt-4 d-flex gap-3 flex-md-row flex-column" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
               <div class="order-guide p-4 shadow bg-primary text-white rounded-4">
                 <h4 class="mb-3 fw-bold">1. Tentukan pilihanmu</h4>
