--- a/index.html
+++ b/index.html
@@ -125,9 +125,7 @@
         <div class="container">
           <div class="about-box text-center">
             <h1 class="fw-bold mb-4" data-aos="fade-up" data-aos-duration="1000">Tentang Kami</h1>
-            <p class="lh-lg mb-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis nemo dolores, quibusdam pariatur quod nulla laudantium, consequuntur ullam distinctio, iusto iste sapiente illo. Animi nulla amet eius. Asperiores, impedit sequi.
-            Voluptatem ratione ipsa eum vero fugit quos error? Tempore facere, saepe, rem vero optio autem perferendis quibusdam repellendus temporibus tempora asperiores expedita aspernatur assumenda excepturi vitae iusto? Ducimus, ratione ex.
-            Veniam praesentium nam pariatur soluta quia itaque saepe rem nihil, temporibus ad fugit mollitia nemo repellendus tempora tempore laborum illo perferendis ducimus eius eos totam, veritatis dolorum. Quod, tempora ipsam.</p>
+            <p class="lh-lg mb-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" >RNR Digital Printing adalah layanan cetak online yang menyediakan berbagai kebutuhan digital printing seperti banner, kartu nama, brosur, dan stiker. Kami hadir untuk memberikan solusi cetak yang mudah, cepat, dan berkualitas. Dengan sistem pemesanan online yang praktis, kamu bisa cetak dari mana saja tanpa harus datang langsung.</p>
             <img src="./assets/5.jpg" alt="About Image"  data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
           </div>  
         </div>
