--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
             <div class="copyright text-white text-center mt-5">
               <p>&copy; Copyright by <span class="fw-bold">RNR Enterprise</span> 2025, All Rights Reserved.</p>
-              <p>Made With Love &#10084;</p>
+              <p>Made With <span>&#10084;</span></p>
             </div>
 
           </div>
