--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse animate__animated animate__fadeInRight animate__delay-1s" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto d-flex gap-2 text-center pt-lg-0 pt-4">
             <li class="nav-item">
               <a class="nav-link fw-bold text-white" href="#home">Home</a>
