--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!--CSS-->
     
+    <!-- Font -->
+     <link rel="stylesheet" href="">
+    <!-- Font -->
+
     <!-- Animate Css -->
     <link
     rel="stylesheet"
@@ -337,7 +341,7 @@
                 <div class="col col-md-4 col-12 d-flex flex-column text-white gap-2 lh-lg">
                   <h4 class="fw-bold">Contact Us</h4>
                   <address>
-                    <p class="m-0 d-flex align-items-center gap-2">Email: <a href="mailto:rnrenterprise@gmail.com" class="text-white">digitalprinting@rnr.tugas1.id</a></p>  
+                    <p class="m-0 d-flex align-items-center gap-2">Email: <a href="mailto:digitalprinting@rnr.tugas1.id" class="text-white">digitalprinting@rnr.tugas1.id</a></p>  
                     <p class="m-0 d-flex align-items-center gap-2">Phone: <a href="tel:+6285156963404" class="text-white">0851-5696-3404</a></p>
                     <p class="m-0 d-flex align-items-center gap-2">Address: Kompleks PT. Semen Indonesia (Persero) Tbk, Jl. Veteran, Kb. Dalem, Sidomoro, Kebomas, Gresik Regency, East Java 61122</p>
                   </address>
