--- a/order-packaging.html
+++ b/order-packaging.html
@@ -13,7 +13,7 @@
     />
     <!--FavIcon-->
 
-    <title>Checkout Cetak Kemasan & Label Produk - RNR Digital Printing</title> <!-- === Diperbaiki: Judul Halaman === -->
+    <title>Checkout Cetak Kemasan & Label Produk - RNR Digital Printing</title> 
 
     <!--CSS-->
     <link rel="stylesheet" href="./css/style.css" />
