--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
         <div class="hero-container text-center my-5">
           <h1 class="display-2 fw-bold text-primary">Jasa Printing</h1>
           <h2 class="display-2 fw-bold text-primary">Serba Mudah & Serba Online</h2>
-          <p class="text-secondary display-5 lead">Pemesanan & Pengantaran Mudah</p>
-          <button class="fw-bold btn btn-primary mt-2 btn-lg">Dikerjakan Langsung Oleh Profesional</button>
+          <p class="display-5 lead">Pemesanan & Pengantaran Mudah</p>
+          <button class="fw-bold btn btn-primary mt-2 btn-lg">Dikerjakan Langsung Oleh Team Profesional</button>
       </div>
       </div>
     </section>
@@ -117,7 +117,7 @@
                   </div>
               </div>
               <div class="box animate__animated animate__fadeInRight animate__delay-3s">
-                  <img src="./assets/3.jpg" alt="Hero Image">
+                  <img src="./assets/3.jpg" alt="Hero Image" style="box-shadow: 0 4px 8px rgba(0,0,0,0.3);">
               </div>
           </div>
        </div>
