--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="hero-container text-center my-5">
           <h1 class="display-2 fw-bold text-primary">Jasa Printing</h1>
           <h2 class="display-2 fw-bold text-primary">Serba Mudah & Serba Online</h2>
-          <p class="display-5 lead">Pemesanan & Pengantaran Mudah</p>
+          <p class="display-5 fw-bold lead">Pemesanan & Pengantaran Mudah</p>
           <button class="fw-bold btn btn-primary mt-2 btn-lg">Dikerjakan Langsung Oleh Team Profesional</button>
       </div>
       </div>
@@ -108,7 +108,6 @@
        <div class="container">
           <div class="hero-box d-flex align-items-center justify-content-between flex-md-row flex-column gap-md-0 gap-5">
               <div class="box animate__animated animate__fadeInLeft animate__delay-3s">
-                  <p class="mark-text fw-bold text-danger">Pemrograman WEB</p>
                   <h1 class="text-align-justify">Welcome To <span class="text-primary">RNR Digital Printing</span></h1>
                   <p>RNR Digital Printing adalah platform digital printing berbasis web yang menyediakan layanan cetak berbagai produk seperti banner, stiker, kartu nama, dan kebutuhan cetak lainnya. Melalui tampilan yang sederhana dan user-friendly, pelanggan dapat dengan mudah melihat daftar harga, memilih layanan, dan melakukan pemesanan secara praktis. RNR Digital Printing hadir untuk memudahkan proses cetak Anda dengan layanan cepat, terjangkau, dan terpercaya.</p>
                   <div>
@@ -358,8 +357,6 @@
         </section>
        <!-- Footer -->
 
-
-
     <!-- Animate Scroll JS -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
@@ -369,9 +366,7 @@
 
     <!--Bootstraps JS-->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
-      crossorigin="anonymous"
+     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     ></script>
     <!--Bootstraps JS-->
   </body>
