--- a/order-fancy-paper.html
+++ b/order-fancy-paper.html
@@ -127,6 +127,81 @@
                 font-size: 0.75rem;
             }
         }
+
+           @media (max-width: 575.98px) {
+            #navbar-detail-product .nav-pills.flex-column .nav-item {
+              width: 100%; 
+              margin-bottom: 0.35rem; 
+            }
+            #navbar-detail-product .nav-pills.flex-column .nav-item:last-child {
+              margin-bottom: 0;
+            }
+            #navbar-detail-product .nav-pills.flex-column .nav-link {
+              text-align: center;
+              padding-top: 0.5rem;   
+              padding-bottom: 0.5rem;
+              padding-left: 100px;
+              padding-right: 100px;
+              font-size: 0.9rem;   
+            }
+          }
+
+          @media (min-width: 576px) and (max-width: 767.98px) {
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-item {
+              width: 100%; 
+              margin-bottom: 0.35rem; 
+            }
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-item:last-child {
+              margin-bottom: 0; 
+            }
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-link {
+              text-align: center; 
+              padding-top: 0.4rem;
+              padding-bottom: 0.4rem;
+              font-size: 0.875rem;
+            }
+          }
+
+
+          @media (min-width: 768px) and (max-width: 991.98px) {
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-item {
+              width: auto; 
+              margin-bottom: 0; 
+            }
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-item:not(:last-child) {
+              margin-right: 0.25rem; 
+            }
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-link {
+              padding-left: 0.6rem;
+              padding-right: 0.6rem;
+              padding-top: 0.4rem;
+              padding-bottom: 0.4rem;
+              font-size: 0.8rem;
+              white-space: nowrap; 
+              text-align: center;     
+            }
+          }
+
+
+          @media (min-width: 992px) {
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-item {
+              width: auto; 
+              margin-bottom: 0; 
+            }
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-item:not(:last-child) {
+              margin-right: 0.5rem; 
+            }
+            #navbar-detail-product .nav-pills.flex-sm-row .nav-link {
+              padding-left: 1rem;
+              padding-right: 1rem;
+              padding-top: 0.5rem;
+              padding-bottom: 0.5rem;
+              font-size: 0.9rem;
+              white-space: normal; 
+              text-align: center;   
+            }
+          }
+        
     </style>
 
   </head>
@@ -218,7 +293,7 @@
                     <div class="detail-product mt-5 text-justify">
                       <nav id="navbar-detail-product" class="navbar navbar-light bg-light px-3 ">
                         <a class="navbar-brand" href="#"></a>
-                        <ul class="nav nav-pills flex-column flex-sm-row mx-auto mb">
+                        <ul class="nav nav-pills flex-column flex-sm-row flex-wrap mx-auto mb">
                           <li class="nav-item">
                             <a class="nav-link" href="#scrollspyHeading1">Detail Product</a>
                           </li>
@@ -371,6 +446,10 @@
                                             <span>Subtotal Item:</span>
                                             <span id="itemSubtotal">Rp 0</span>
                                         </li>
+                                          <li>
+                                            <span>Promo:</span>
+                                            <span id="promoDiscountDisplay">Rp 0</span>
+                                        </li>
                                         <li>
                                             <span>Estimasi Sampai:</span>
                                             <span id="estimatedTime">Pilih opsi pengiriman</span>
@@ -382,10 +461,6 @@
                                         <li>
                                             <span>Pajak:</span>
                                             <span id="taxAmount">Rp 0</span>
-                                        </li>
-                                        <li>
-                                            <span>Promo:</span>
-                                            <span id="promoDiscountDisplay">Rp 0</span>
                                         </li>
                                         <li class="cart-total">
                                             <span>Total Estimasi:</span>
