--- a/order-fancy-paper.html
+++ b/order-fancy-paper.html
@@ -267,16 +267,20 @@
                             <button type="button" data-bs-target="#fancyPaperCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                             <button type="button" data-bs-target="#fancyPaperCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
                             <button type="button" data-bs-target="#fancyPaperCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#fancyPaperCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                            <img src="./assets/12.jpeg" class="d-block w-100" alt="Fancy Paper Image">
+                            <img src="./assets/Linen-FancyPaper.jpg" class="d-block w-100" alt="Linen Fancy Paper Image">
                             </div>
                             <div class="carousel-item">
-                            <img src="./assets/13.jpeg" class="d-block w-100" alt="Fancy Paper Image">
+                            <img src="./assets/Jasmine-FancyPaper.jpg" class="d-block w-100" alt="Jasmine Fancy Paper Image">
                             </div>
                             <div class="carousel-item">
-                            <img src="./assets/kemasan.jpeg" class="d-block w-100" alt="Fancy Paper Image">
+                            <img src="./assets/Concorde-FancyPaper.jpg" class="d-block w-100" alt="Concorde Fancy Paper Image">
+                            </div>
+                            <div class="carousel-item">
+                            <img src="./assets/Hammer-FancyPaper.jpg" class="d-block w-100" alt="Hammer Fancy Paper Image">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#fancyPaperCarousel" data-bs-slide="prev">
