--- a/order-packaging.html
+++ b/order-packaging.html
@@ -249,17 +249,13 @@
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#packagingCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#packagingCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#packagingCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="./assets/12.jpeg" class="d-block w-100" alt="Contoh Cetak Kemasan dan Label 1">
+            <img src="./assets/Label-Stiker-Packaging.jpg" class="d-block w-100" alt="Label Sticker Packaging">
         </div>
         <div class="carousel-item">
-            <img src="./assets/13.jpeg" class="d-block w-100" alt="Contoh Cetak Kemasan dan Label 2">
-        </div>
-        <div class="carousel-item">
-            <img src="./assets/kemasan.jpeg" class="d-block w-100" alt="Contoh Cetak Kemasan dan Label 3">
+            <img src="./assets/Packaging-Custom-Packaging.jpg" class="d-block w-100" alt="Packaging Custom">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#packagingCarousel" data-bs-slide="prev">
