--- a/order-uv-printing.html
+++ b/order-uv-printing.html
@@ -241,7 +241,7 @@
 
     <section class="order-page-section">
         <div class="container">
-            <h1 class="display-5 fw-bold text-center mb-5">Halaman Pemesanan UV Printing</h1> <!-- Title adjusted -->
+            <h1 class="display-5 fw-bold text-center mb-5">Halaman Pemesanan UV Printing</h1> 
             <div class="row g-4">
                 <div class="col-md-6">
 
@@ -251,16 +251,24 @@
         <button type="button" data-bs-target="#uvPrintingCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#uvPrintingCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#uvPrintingCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#uvPrintingCarousel" data-bs-slide-to="3" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#uvPrintingCarousel" data-bs-slide-to="4" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="./assets/12.jpeg" class="d-block w-100" alt="UV Printing Image">
+            <img src="./assets/ID-Card.jpg" class="d-block w-100" alt="ID Card UV Printing Image">
         </div>
         <div class="carousel-item">
-            <img src="./assets/13.jpeg" class="d-block w-100" alt="UV Printing Image">
+            <img src="./assets/Lanyard.jpg" class="d-block w-100" alt="Lanyard UV Printing Image">
         </div>
         <div class="carousel-item">
-            <img src="./assets/kemasan.jpeg" class="d-block w-100" alt="UV Printing Image">
+            <img src="./assets/Tiket-Gelang.jpg" class="d-block w-100" alt="UV Printing Image">
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/Custom-Casing-Hp.jpg" class="d-block w-100" alt="Custom-Casing-Hp Printing Image">
+        </div>
+        <div class="carousel-item">
+            <img src="./assets/Akrilik-Flatbed.jpg" class="d-block w-100" alt="Akrilik-Flatbed Printing Image">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#uvPrintingCarousel" data-bs-slide="prev">
@@ -275,17 +283,17 @@
 <!-- Carousel -->
                     <!-- Carousel -->
 
-                    <!-- Product Details Section with Scrollspy Nav -->
+                  
                     <div class="detail-product mt-5 text-justify">
                       <nav id="navbar-detail-product" class="navbar navbar-light bg-light px-3">
                         <a class="navbar-brand" href="#"></a>
-                         <!-- Links adjusted to match the fancy paper model links structure -->
+                       
                         <ul class="nav nav-pills flex-column flex-sm-row flex-wrap mx-auto mb">
                           <li class="nav-item">
                             <a class="nav-link" href="#scrollspyHeading1">Detail Product</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#scrollspyHeading2">Keunggulan</a> <!-- Link text adjusted -->
+                            <a class="nav-link" href="#scrollspyHeading2">Keunggulan</a> 
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#scrollspyHeading3">Cocok untuk</a> <!-- Link text adjusted -->
